# artifacts/EAP/a7_openapi.yaml
@@ -355,12 +355,28 @@ paths:
       tags:
         - "M03"
 
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+                state:
+                  type: string
+                  default: CREATED
+                position:
+                  type: integer
+                task_group:
+                  type: integer
+              required:
+                - name
+                - task_group
+                - position
 
       responses:
         "302":
