# resources/views/partials/project/board/task-group.blade.php
@@ -17,10 +17,15 @@
             <a href="{{ url("/project/$group->project/task/$t->id") }}"
                 class="shadow-sm rounded p-1 bg-white">{{ $t->name }}</a>
         @endforeach
-        <button href="{{ route('project.home', ['id' => $group->project]) }}"
-            class="btn btn-primary">
-            <i class="bi-add"></i>Create task
-        </button>
+        <form method="@yield('method', 'POST')" action="{{ url('/project/' . $group->project . '/task/new')}}">
+            @csrf
+            <div class="input-group p-1 mb-3">
+                <input aria-label="Create Task Name" aria-describedby="task-name" class="form-control" id="name" type="text" name="name" placeholder="New Task" required>
+                <button class="btn btn-outline-secondary" type="submit">&plus;</button>
+            </div>  
+            <input type="hidden" class="form-control" id="position" name="position" value=>
+            <input type="hidden" class="form-control" id="task_group" name="task_group" value="{{$group->id}}">
+        </form> 
     @else
         <button href="{{ url('/project/' . $project->id) }}" class="btn btn-primary">
             <i class="bi-add"></i>Create group
